--- a/10-bloco-Teste automatizados com jest/01-primeiro passos no jest/project01/package.json
+++ b/10-bloco-Teste automatizados com jest/01-primeiro passos no jest/project01/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Flavio-Oliveira",
   "license": "ISC",
   "dependencies": {
     "dev": "^0.1.3",
