--- a/29B  Aquitetura e SOLID e ORm/01 - Arquitetura - Principios SOLID/package.json
+++ b/29B  Aquitetura e SOLID e ORm/01 - Arquitetura - Principios SOLID/package.json
@@ -14,6 +14,7 @@
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-trybe-backend": "^1.0.4",
+    "eslint-plugin-sonarjs": "^0.10.0",
     "mocha": "^9.1.2",
     "sinon": "^11.1.2"
   }
