--- a/29B  Aquitetura e SOLID e ORm/01 - Arquitetura - Principios SOLID/package.json
+++ b/29B  Aquitetura e SOLID e ORm/01 - Arquitetura - Principios SOLID/package.json
@@ -17,5 +17,9 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "mocha": "^9.1.2",
     "sinon": "^11.1.2"
+  },
+  "dependencies": {
+    "axios": "^0.22.0",
+    "node-fetch": "^2.6.5"
   }
 }
