--- a/29B  Aquitetura e SOLID e ORm/02 - ORM - interface da aplicação com o banco de dados/package.json
+++ b/29B  Aquitetura e SOLID e ORm/02 - ORM - interface da aplicação com o banco de dados/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "\"foa12381@gmail.com\"",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mysql2": "^2.3.2",
+    "sequelize": "^6.7.0",
+    "sequelize-cli": "^6.2.0"
+  }
 }
