--- a/29B  Aquitetura e SOLID e ORm/02 - ORM - interface da aplicação com o banco de dados/package.json
+++ b/29B  Aquitetura e SOLID e ORm/02 - ORM - interface da aplicação com o banco de dados/package.json
@@ -9,6 +9,9 @@
   "author": "\"foa12381@gmail.com\"",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-rescue": "^1.1.31",
     "mysql2": "^2.3.2",
     "sequelize": "^6.7.0",
     "sequelize-cli": "^6.2.0"
